--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "daisyui": "^3.8.1"
+        "daisyui": "^3.8.1",
+        "react-router-dom": "^6.16.0"
     }
 }
