--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "daisyui": "^3.8.1",
+        "react-particles": "^2.12.2",
         "react-router-dom": "^6.16.0"
     }
 }
